--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div id="top">
     <div id="ui">
-      <div style="background-image: url('img/20180728081623.png')" class="icon"></div>
+      <div style="background-image: url('7A0BFBCF-70F9-42C3-90F4-BB048DFACCFB.jpeg')" class="icon"></div>
       <div id="search"></div>
       <div style="background-image: url('img/20180728081636.png')" class="icon"></div>
     </div>
