--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta name="viewport" content="width=device-width" />
   <title>fake-safari</title>
   <link rel="stylesheet" href="style.css" />
+  <meta name="apple-mobile-web-app-capable" content="yes"
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
 </head>
 <body>
   <div id="top">
