--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>fake-safari</title>
   <link rel="stylesheet" href="style.css" />
   <meta name="apple-mobile-web-app-capable" content="yes"
-  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <title>Safari</title>
 </head>
 <body>
