--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" href="style.css" />
-  <meta name="apple-mobile-web-app-capable" content="yes"
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <title>Safari</title>
 </head>
