--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="style.css" />
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <link rel="apple-touch-icon" href="">
+  <link rel="apple-touch-icon" href="061DFF76-EFC1-4C08-98DF-76D87C20519E.jpeg">
   <title>Safari</title>
 </head>
 <body>
